test/types/scalar/diten/floatingPointBadSize.good
floatingPointBadSize.chpl:1: error: illegal size 27 for real
floatingPointBadSize.chpl:1: error: unresolved call 'real(64)(27)'
floatingPointBadSize.chpl:1: note: because no functions named real(64) found in scope
